# sunwalker-box

./: .clangd  .dockerignore  .gitignore  .gitmodules  .mailmap  Cargo.toml  Dockerfile  Makefile  README.md  default.nix  dependencies.nix  flake.nix  generate_constant_table.py  generate_string_tables.py  generate_syscall_table.py  output-hashes.json  rustfmt.toml  stackcheck.py  update-output-hashes.sh
.github/workflows/: linux.yml
cxx/: README.md  exec_wrapper.cpp  exec_wrapper.ld  libc.hpp  parasite.cpp  parasite.ld  result.hpp  stemcell.cpp  stemcell.ld
cxx/remembrances/: alternative_stack.hpp  arch_prctl_options.hpp  file_descriptors.hpp  itimers.hpp  memory_maps.hpp  mm_options.hpp  pending_signals.hpp  personality.hpp  program_break.hpp  robust_list.hpp  rseq.hpp  signal_handlers.hpp  signal_mask.hpp  thp_options.hpp  tid_address.hpp  timers.hpp  umask.hpp
docs/: .gitignore  Makefile  toc
docs/Source/: building.md  index.md  overview.md  usage.md  userapi.md
docs/Source/api/: bind.md  commit.md  extpath.md  overview.md  reset.md  run.md
docs/Source/hacking/: logging.md
docs/Source/tutorial/: hello-world.md  troubleshooting.md
generate/: context_map.py  stemcell_relocations.py  string_tables.py  syscall_wrappers.py  update-output-hashes.nix
kmodule/: .gitignore
kmodule/aarch64/: Makefile  sunwalker.c
multiprocessing/: Cargo.toml
multiprocessing/multiprocessing-derive/src/: lib.rs
multiprocessing/src/: builtins.rs  delayed.rs  fns.rs  imp.rs  ipc.rs  lib.rs  pod.rs  serde.rs  soundness.rs  subprocess.rs  tokio.rs
multiprocessing/src/platform/unix/: ipc.rs  subprocess.rs  tokio.rs
multiprocessing/src/platform/windows/: ipc.rs  subprocess.rs  tokio.rs
multiprocessing/tests/: main.rs  tokio.rs
parasite/: .gitignore  Cargo.toml  script.ld  stackcheck.py
parasite/src/: anyhow.rs  entry.S  entry.rs  file.rs  fixed_vec.rs  format.rs  lib.rs  libc.rs  runtime.rs  string_table.rs  syscall_wrapper.rs  types.rs  util.rs
parasite/src/remembrances/: arch_prctl_options.rs  cwd.rs  fds.rs  itimers.rs  memory_maps.rs  mm_options.rs  mod.rs  pending_signals.rs  personality.rs  resource_limits.rs  robust_list.rs  rseq.rs  sigaltstack.rs  signal_handlers.rs  signal_mask.rs  thp_options.rs  tid_address.rs  timers.rs  umask.rs
sandbox_tests/: conductor.py  flake.nix  shell.nix  sunwalker_box.py  test.py  tester_box.py
sandbox_tests/tests/: arm_cnt.c  binds.c  binds.py  binds_reset.py  cloexec.c  cntvct.c  commit_binds.py  commit_during_prefork.c  commit_files.py  cow_stats.c  cpu_time_limit.c  daemons.py  dev.py  environment.py  exit_code.c  fake_rw.c  fork_bomb.c  fsreset.c  fsroot.c  hello_world.c  hello_world_limited.c  hello_world_stats.c  hidden_procfs.py  idleness_time_limit.c  ids.c  inode.py  ipc.c  itimer_prof_is_not_critical.c  memfd_freed.c  memfd_limit.py  memfd_names.py  memory_limit.c  memory_stats.c  mounts.c  netns.py  netns.yaml  parallel.c  pidns.py  pmccntr.c  prefork_aborts_rseq.c  (+41 more)
src/: cgroups.rs  entry.rs  ids.rs  lib.rs  log.rs  main.rs  mountns.rs  procs.rs  rootfs.rs  sandbox.rs  system.rs  userns.rs  zeroed_padding.rs
src/linux/: cgroups.rs  controller.rs  entry.rs  exec_wrapper.asm  ids.rs  ipc.rs  kmodule.rs  manager.rs  mountns.rs  openat.rs  prefork.rs  procs.rs  reaper.rs  rootfs.rs  running.rs  sandbox.rs  seccomp_filter.asm  string_table.rs  system.rs  timens.rs  tracing.rs  userns.rs
src/linux/aarch64/: exec_wrapper.asm  filter.seccomp  filter_restricted.seccomp  seccomp_filter.asm
src/linux/x86_64/: filter.seccomp  (+4 more)
(+6 files in other folders)
