[package]
name = "sunwalker_box"
version = "0.1.0"
edition = "2021"
authors = ["Ivanq <imachug@gmail.com>"]
license = "Apache-2.0"
description = "Sandbox for sunwalker judge system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1.9"
interfaces = "0.0.8"
json = "0.12.4"
multiprocessing = { git = "https://github.com/imachug/multiprocessing" }
nix = "0.26.1"
openat = "0.1.21"
rand = "0.8.5"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
