[package]
name = "sunwalker_box"
version = "0.1.0"
edition = "2021"
authors = ["Alisa Sireneva <imachug@gmail.com>"]
license = "Apache-2.0"
description = "Sandbox for sunwalker judge system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1.9"
interfaces = "0.0.9"
json = "0.12.4"
crossmist = "0.1.5"
nix = { version = "0.27.1", features = ["resource", "sched", "kmod", "ptrace", "signal", "fs", "time", "user", "poll", "event"] }
openat = "0.1.21"
rand = "0.8.5"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
