[package]
name = "sunwalker_box"
version = "0.1.0"
edition = "2021"
authors = ["Alisa Sireneva <imachug@gmail.com>"]
license = "Apache-2.0"
description = "Sandbox for sunwalker judge system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { git = "https://github.com/purplesyringa/anyhow", branch = "optout-backtrace", features = ["no_backtrace"]}
argh = "0.1.9"
crossmist = "0.2.4"
nix = { version = "0.27.1", features = ["resource", "sched", "kmod", "ptrace", "signal", "fs", "time", "user", "poll", "event", "process", "mount"] }
openat = "0.1.21"
rand = "0.8.5"
miniserde = "0.1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
