[package]
name = "multiprocessing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiprocessing-derive = { path = "multiprocessing-derive" }
ctor = "0.1.22"
lazy_static = "1.4.0"
nix = "0.23.1"
tokio = { version = "1", features = ["full"] }
tokio-seqpacket = "0.5.4"
openat = "0.1.21"
paste = "1.0"
itertools = "0.10.3"

[[test]]
name = "sync-main"
path = "tests/main.rs"
harness = false

[[test]]
name = "tokio-main"
path = "tests/tokio.rs"
harness = false
