[package]
name = "multiprocessing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1.22"
itertools = "0.10.3"
lazy_static = "1.4.0"
multiprocessing-derive = { path = "multiprocessing-derive" }
paste = "1.0"
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
nix = "0.23.1"
openat = "0.1.21"
tokio-seqpacket = "0.5.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.39.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]}

[[test]]
name = "sync-main"
path = "tests/main.rs"
harness = false

[[test]]
name = "tokio-main"
path = "tests/tokio.rs"
harness = false
